# w600-pac

./: CMSIS-SVD.xsd  Cargo.toml  W600.bak.svd  W600.svd  device.x  flash.bat  memory.x  openocd.gdb  update.sh
.cargo/: config
examples/: blink.rs
patches/: w600.yaml
src/: gpiob.rs  lib.rs  rcc.rs
src/gpioa/: af_sel.rs  data.rs  data_en.rs  ic.rs  ie.rs  mis.rs  ris.rs  sf_s1.rs
src/gpiob/: af_s0.rs  data.rs  data_en.rs  pull_en.rs
src/rcc/: debug_ctrl.rs  i2s_clk_ctrl.rs  sw_clk_mask.rs  sw_clkg_en.rs  sw_rst_ctrl.rs  sys_clk_div.rs
