[package]
name = "w600-pac"
version = "0.1.0"
authors = ["Leah <github.leah@hrmny.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
bare-metal = "0.2.5"
vcell = "0.1.2"
panic-abort = "0.3.2"
